--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: dschat
 Section: python
 Maintainer: Antti Husa <antti.husa@student.oulu.fi>
-Build-Depends-Indep: debhelper (>= 9), python (>=2.7.0)
+Build-Depends-Indep: debhelper (>= 9), python2.7, python2.7-dev
 Standards-Version: 3.9.8
 X-Python-Version: >= 2.7
 
@@ -9,5 +9,5 @@ X-Python-Version: >= 2.7
 Package: dschat
 Architecture: all
 Section: python
-Depends: ${misc:Depends}, ${python:Depends}
+Depends: ${misc:Depends}, ${python:Depends}, python2.7
 Description: DS 2017 Chat program
