--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,16 @@
 flask>=0.12
 pyzmq>=16.0.2
 cryptography>=0.6.1
-
 Flask_SocketIO
-
 itsdangerous==0.24
-
 Jinja2==2.7.3
-
 MarkupSafe==0.23
-
-
 python-engineio
-
-
 python-socketio
-
 six==1.9.0
 Werkzeug==0.10.4
+click>=6.6
+eventlet>=0.17.4
+Flask-WTF>=0.9.5
+greenlet>=0.4.2
+WTForms>=1.0.5
